# iot-vlms

./: .gitignore  Dockerfile  Dockerfile.simulator  VLMS_Technical_Specification.md  docker-compose.yml  pyproject.toml  railway.simulator.toml  railway.toml
frontend/: Dockerfile  Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  railway.toml
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: AreaChartCard.tsx  BarChartCard.tsx  GaugeChart.tsx  LineChartCard.tsx  MultiLineChartCard.tsx  PieChartCard.tsx  index.ts
frontend/src/components/common/: LanguageToggle.tsx
frontend/src/components/dashboard/: AlertsTable.tsx  StationsTable.tsx  StatsCard.tsx  index.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Login.tsx  MapView.tsx  StationDetail.tsx  Stations.tsx
frontend/src/services/: alerts.ts  api.ts  stations.ts  telemetry.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
scripts/: seed_data.py  simulator.py
src/: main.py
src/api/: deps.py
src/api/v1/: ai.py  alerts.py  health.py  router.py  stations.py  telemetry.py  users.py
src/core/: config.py  database.py  exceptions.py  security.py
src/db/migrations/: 001_initial.sql  001_initial_no_postgis.sql
src/db/queries/: alerts.py  stations.py  telemetry.py  users.py
src/models/: alert.py  base.py  station.py  telemetry.py  user.py
src/services/ai/: service.py
src/services/alert/: service.py
src/services/station/: service.py
src/services/telemetry/: service.py
src/services/user/: service.py
(+7 files in other folders)
